--- a/main.css
+++ b/main.css
@@ -59,7 +59,6 @@ a:hover {
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
-  font-weight: 700;
   color: rgba(255, 255, 255, .5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
@@ -127,7 +126,7 @@ a:hover {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-signin input[type="tel"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -146,6 +145,17 @@ a:hover {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+/******* My code **************/
+.btn-default {
+
+  background-color: #400000;
+
+  color: #FFF;
+
+  border-color: #400000;
+
 }
 
 
