--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 html,
 body {
   height: 100%;
-  background-color: rgb(143, 31, 31);
+  background-color: #fff;
   font-family: 'Cairo', sans-serif;
 }
 
@@ -15,26 +15,35 @@ body {
   align-items: center;
   padding-top: 0px;
   padding-bottom: 0px;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  color: #610202;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .3);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .3);
 }
 
 /* Links */
-a,
+a {
+  color: rgba(70, 4, 4, 0.644);
+}
+
 a:focus,
 a:hover {
-  color: #fff;
+  color: rgba(70, 4, 4, 0.425);
 }
 
 /* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
+.btn-default {
+  color: #fff;
   text-shadow: none;
   /* Prevent inheritance from `body` */
-  background-color: #fff;
+  background-color: rgb(97, 2, 2);
+  border: .05rem solid #fff;
+}
+
+.btn-default:hover {
+  color: #fff;
+  text-shadow: none;
+  /* Prevent inheritance from `body` */
+  background-color: rgba(95, 2, 2, 0.808);
   border: .05rem solid #fff;
 }
 
@@ -49,24 +58,17 @@ a:hover {
 /*
  * Header
  */
-.masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
-}
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
-  color: rgba(255, 255, 255, .5);
+  color: darkred;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: darkred;
 }
 
 .nav-masthead .nav-link+.nav-link {
@@ -74,16 +76,20 @@ a:hover {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: darkred;
+  border-bottom-color: darkred;
 }
 
 
 
 /*
- * Cover
+ * main
  */
-.cover {
+.main-title {
+  font-weight: bold;
+}
+
+.main-subtitle {
   padding: 0 1.5rem;
 }
 
@@ -92,71 +98,63 @@ a:hover {
   font-weight: 700;
 }
 
-
-/*
- * Footer
- */
-.mastfoot {
-  color: rgba(255, 255, 255, .5);
-}
-
-
-
-
-.form-signin {
+.form-sign {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
 }
 
-.form-signin .checkbox {
+.form-sign .checkbox {
   font-weight: 400;
 }
 
-.form-signin .form-control {
+.form-sign .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
   padding: 10px;
-  font-size: 16px;
+  font-size: 15px;
+  color: darkred;
 }
 
-.form-signin .form-control:focus {
+.form-sign .form-control:focus {
   z-index: 2;
 }
 
-.form-signin input[type="tel"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
+.form-sign input[type="tel"] {
   margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  /*  border-bottom-right-radius: 0;
+  /  border-bottom-left-radius: 0;*/
 }
 
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.form-sign input[type="password"] {
+  margin-bottom: 10px;
+  /* border-top-left-radius: 0;
+  border-top-right-radius: 0;*/
 }
+
+/*
+ * Footer
+ */
+
+
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: auto 15px;
+}
+
+
+.mastfoot {
+  text-align: center;
+}
+
+
+
 
 /******* My code **************/
-.btn-default {
 
-  background-color: #400000;
-
-  color: #FFF;
-
-  border-color: #400000;
-
-}
 
 
 @media (min-width: 48em) {
@@ -169,8 +167,4 @@ a:hover {
   }
 }
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
+@media (min-width: 768px) {}
