--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .3);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .3);
 }
-
+.align-right{text-align: right;}
 /* Links */
 a {
   color: rgba(70, 4, 4, 0.644);
@@ -31,7 +31,7 @@ a:hover {
 }
 
 /* Custom default button */
-.btn-default {
+.btn-default,.btn-danger {
   color: #fff;
   text-shadow: none;
   background-color: rgb(138, 3, 3);
@@ -39,7 +39,7 @@ a:hover {
 
 }
 
-.btn-default:hover {
+.btn-default:hover,.btn-danger:hover {
   color: #fff;
   text-shadow: none;
   background-color: rgb(99, 3, 3);
@@ -59,7 +59,7 @@ a:hover {
 /*
   * Header
   */
-
+.nav-masthead{float: right;} 
 .nav-masthead .nav-link {
   padding: .25rem 0;
   color: darkred;
@@ -91,13 +91,16 @@ a:hover {
 }
 
 
+.form-title {
+  margin-top: 25px;
+}
 
 .form-sign {
   width: 100%;
-  max-width: 330px;
-  padding: 15px;
+  max-width: 383px;
+  padding: 10px;
   margin: auto;
-}
+ }
 
 .form-sign .checkbox {
   font-weight: 400;
@@ -120,13 +123,14 @@ a:hover {
   margin-bottom: 10px;
 }
 
-.form-sign input[type="password"] {
-  margin-bottom: 10px;
+
+
+
+label{
+  font-size:18px;
+  vertical-align: middle;
 }
 
-.user-options {
-  text-align: right;
-}
 
 /*
   * Footer
