--- a/main.css
+++ b/main.css
@@ -19,7 +19,11 @@ body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .3);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .3);
 }
-.align-right{text-align: right;}
+
+.align-right {
+  text-align: right;
+}
+
 /* Links */
 a {
   color: rgba(70, 4, 4, 0.644);
@@ -31,7 +35,8 @@ a:hover {
 }
 
 /* Custom default button */
-.btn-default,.btn-danger {
+.btn-default,
+.btn-danger {
   color: #fff;
   text-shadow: none;
   background-color: rgb(138, 3, 3);
@@ -39,7 +44,8 @@ a:hover {
 
 }
 
-.btn-default:hover,.btn-danger:hover {
+.btn-default:hover,
+.btn-danger:hover {
   color: #fff;
   text-shadow: none;
   background-color: rgb(99, 3, 3);
@@ -59,7 +65,10 @@ a:hover {
 /*
   * Header
   */
-.nav-masthead{float: right;} 
+.nav-masthead {
+ // float: none;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   color: darkred;
@@ -100,7 +109,7 @@ a:hover {
   max-width: 383px;
   padding: 10px;
   margin: auto;
- }
+}
 
 .form-sign .checkbox {
   font-weight: 400;
@@ -123,11 +132,8 @@ a:hover {
   margin-bottom: 10px;
 }
 
-
-
-
-label{
-  font-size:18px;
+label {
+  font-size: 18px;
   vertical-align: middle;
 }
 
