dynamic menu & use cas test

--- a/views/getcode.ejs
+++ b/views/getcode.ejs
@@ -19,7 +19,7 @@
         </div> -->
         <button class="btn btn-md btn-default btn-block mb-3" type="submit">سجل</button>
         <div class="user-options">
-            <p class="mb-1">تسجيل <a href="index.html">الدخول</a></p>
+            <p class="mb-1">تسجيل <a href="/">الدخول</a></p>
 
         </div>
     </form>
