--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto pb-2  mp-0">
   <div class="container">
-    <span class="mb-5 ">تبرع &copy; 2019</span>
+    <span>تبرع &copy; 2019</span>
   </div>
 </footer>
 </div>
