--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -33,8 +33,8 @@
             <label class="btn btn-danger  btn-bt"> AB+ </label>
             <label class="btn btn-danger  btn-bt"> AB- </label>
         </div>
-        <input type="tel" id="inputCodePost" class="form-control mb-2" placeholder="الرمز البريدي" required
-            autocomplete="off" autofocus onfocus="this.value=''">
+        <input type="tel" id="inputCodePost" class="form-control mb-2" placeholder="رقم الولاية" required autocomplete="off"
+            autofocus onfocus="this.value=''">
         <input type="captcha" id="captcha" class="form-control mb-4" placeholder="5+9 =?" required autocomplete="off"
             autofocus onfocus="this.value=''">
 
