--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,12 +54,14 @@ a:hover {
   color: #fff;
   text-shadow: none;
   background-color:#590202;
-  border-radius:10px;
+  border-radius:0;
   font-weight:normal;
+  border:0;
 
 }
 .cbt{
   width:100%;
+  border-radius:0;
 }
 .main-header{
   background-color: #5902021a;
