--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")-%>
+<%- include('partials/header'); -%>
 <main role="main">
     <div class="main-header">
         <h5 class="pt-3"> اضافة طلب تبرع </h5>
@@ -8,7 +8,6 @@
         <div class="mb-2 align-right">
             <h5 class="w-100">سلامتك, كيف تصف حالتك؟</h5>
             <div class="form-check form-check-inline  ">
-
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"
                     onclick="handleClick(this);">
                 <label class="form-check-label" for="inlineRadio1">&nbsp;مستقرة</label>
@@ -25,14 +24,7 @@
             autocomplete="off" autofocus onfocus="this.value=''">
         <input type="captcha" id="captcha" class="form-control mb-4" placeholder="5+9 =?" required autocomplete="off"
             autofocus onfocus="this.value=''" required maxlength="30">
-
-        <!--           <div class=" checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div> -->
         <button class="btn btn-md btn-default btn-block mb-3" type="submit">اضف الطلب</button>
-
     </form>
 </main>
-<%-include("partials/footer")-%>
+<%- include('partials/footer') -%>
