--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,9 @@
 
         <input type="password" name="password" id="inputPassword" class="form-control mb-2" placeholder="الكود" required
             autocomplete="off" onfocus="this.value=''" maxlength="5">
-        <input type="captcha" name="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required
-            autocomplete="off" autofocus onfocus="this.value=''" maxlength="5">
-        <button class="btn btn-md btn-default btn-block mb-3" type="submit">دخول</button>
-        <div class="user-options">
-            <p class="mb-1"> إنشاء <a href="/signin.html">حساب جديد</a></p>
-            <p class="mb-1">استرجاع الكود <a href="/getcode.html">من هنا</a></p>
-        </div>
+
+
+        <button class="btn btn-md btn-default btn-block mb-3" type="submit" ">دخول</button>
     </form>
 </main>
 <%- include("partials/footer") -%>
