--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
   <meta name="author" content="Blood donation,donor,patient">
   <meta name="generator" content="BloodDonation">
   <title>منصة تبرع</title>
-  <link href='/images/blood-drop.png' rel='icon' type='image/x-icon' />
+  <link href='/imgs/blood-drop.png' rel='icon' type='image/x-icon' />
 
   <!--link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">-->
 
@@ -21,16 +21,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.62/jquery.inputmask.bundle.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+
 </head>
 
-<body class="text-center">
+<body class="text-center" onload="generateCaptcha()">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header>
       <div>
         <nav class="nav nav-masthead justify-content-center">
-          <% if ( _connected===true ){ %>
-          <a class="nav-link  active" href="/">الرئسية</a>
+          <% if ( _connected===true ){ console.log("user connected"); %>
+          <% if ( _userType==="donor" ){ console.log("donor"); %>
+          <a class="nav-link" href="/donorstate.html">الرئسية</a>
+          <% } else {  console.log("patient");  %>
+          <a class="nav-link" href="/addrequest.html">الرئسية</a>
+          <% } %>
           <a class="nav-link" href="/userprofile.html">تحديث المعلومات </a>
+          <% } else {  console.log("user not connected"); %>
+          <a class="nav-link" href="/"> الدخول</a>
+          <a class="nav-link" href="/signin.html">مستخدم جديد</a>
+          <a class="nav-link" href="/getcode.html">استرجاع الكود</a>
           <% } %>
           <a class="nav-link" href="/contactus.html">اتصل بنا</a>
         </nav>
