full ejs working

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,147 +3,156 @@
  */
 html,
 body {
-  height: 100%;
-  font-family: 'Cairo', sans-serif;
-  color:#590202;
+   height: 100%;
+   font-family: 'Cairo', sans-serif;
+   color: #590202;
 }
 
 body {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 0px;
-  padding-bottom: 0px;  
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .3);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .3);
+   display: -ms-flexbox;
+   display: flex;
+   -ms-flex-align: center;
+   align-items: center;
+   padding-top: 0px;
+   padding-bottom: 0px;
+   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .3);
+   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .3);
 }
 
 .align-right {
-  text-align: right;
+   text-align: right;
 }
+
 .align-center {
-  text-align: center;
+   text-align: center;
 }
 
 /* Links */
 a {
-  color: #590202;
+   color: #590202;
 
 }
 
 a:focus,
 a:hover {
-  text-decoration: none;
-  color: #590202;
-  text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+   text-decoration: none;
+   color: #590202;
+   text-shadow: 0 0 .65px #333, 0 0 .65px #333;
 }
 
 /* Custom default button */
 .btn-default {
-  margin-top:1.6rem; 
-  color: #fff;
-  text-shadow: none;
-  background-color:#590202;
-  border-radius:10px;
-  font-weight:normal;
+   margin-top: 1.6rem;
+   color: #fff;
+   text-shadow: none;
+   background-color: #590202;
+   border-radius: 10px;
+   font-weight: normal;
 
 }
+
 .btn-danger {
-  margin-top:1.6rem; 
-  color: #fff;
-  text-shadow: none;
-  background-color:#590202;
-  border-radius:0;
-  font-weight:normal;
-  border:0;
+   margin-top: 1.6rem;
+   color: #fff;
+   text-shadow: none;
+   background-color: #590202;
+   border-radius: 0;
+   font-weight: normal;
+   border: 0;
 
 }
-.cbt{
-  width:100%;
-  border-radius:0;
+
+.cbt {
+   width: 100%;
+   border-radius: 0;
 }
-.main-header{
-  background-color: #5902021a;
-  max-width: 380px;
-  width: 100%;
-  padding: 20px auto;
-  margin: 20px auto;
-  color:darkred;
-  border-radius: 15px;
+
+.main-header {
+   background-color: #5902021a;
+   max-width: 380px;
+   width: 100%;
+   padding: 20px auto;
+   margin: 20px auto;
+   color: darkred;
+   border-radius: 15px;
+   box-shadow: 0 0 8px #252523;
+   border: none;
 }
-.btn-bt{
-  padding-left:3px;
-  padding-right:auto;
-  margin:0;
+
+.btn-bt {
+   padding-left: 3px;
+   padding-right: auto;
+   margin: 0;
 }
-.btn-danger:hover
- {
-  color: #fff;
-  transition:  .15s; 
+
+.btn-danger:hover {
+   color: #fff;
+   transition: .15s;
 }
 
 .btn-default:hover {
-  color: darkred;
-  background-color: #fff;
-  transition:  .15s; 
-  border-color: darkred;
- 
+   color: darkred;
+   background-color: #fff;
+   transition: .15s;
+   border-color: darkred;
+
 }
 
 /*
   * Base structure
   */
 .cover-container {
-  max-width: 42em;
+   max-width: 42em;
 }
 
 /*
   * ***************    Header
   */
-header{
-    margin-bottom: 25px;
-    
-    margin: 0 auto;
-  }
-.nav-masthead{  width: 380px;}
+header {
+   margin-bottom: 25px;
+   margin: 0 auto;
+}
+
+.nav-masthead {
+   width: 380px;
+}
+
 .nav-masthead .nav-link {
-  margin-left: 1.1rem;
-  padding: .25rem 0;
-  color: darkred;
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+   margin-left: 1.1rem;
+   padding: .25rem 0;
+   color: darkred;
+   background-color: transparent;
+   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: darkred;
+   border-bottom-color: darkred;
 }
 
 .nav-masthead .active {
-  color: darkred;
-  border-bottom-color: darkred;
+   color: darkred;
+   border-bottom-color: darkred;
 }
 
 /*
-  * ***************   main
+  * ***************   main 
   */
 .main-title {
-  font-weight: bold;
+   font-weight: bold;
 }
 
-
-
-
 .form-sign {
-  width: 100%;
-  max-width: 380px;
-  padding: 10px;
-  margin: auto;
-  color:darkred;
-  border-radius: 15px;
-  background-color: #5902021a;
-  /* background: url(/images/bg.jpg);  
+   width: 100%;
+   max-width: 380px;
+   padding: 10px;
+   margin: auto;
+   color: darkred;
+   border-radius: 15px;
+   background-color: #5902021a;
+   box-shadow: 0 0 8px #252523;
+   border: none;
+   /* background: url(/images/bg.jpg);  
   /* Center and scale the image nicely * /
   background-position: center;
   background-repeat: no-repeat;
@@ -151,103 +160,133 @@ header{
 }
 
 .form-sign .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 2px 10px ;
-  font-size: 16px;
-  color: darkred;
+   position: relative;
+   box-sizing: border-box;
+   height: auto;
+   width: 90%;
+   padding: auto 10px;
+   margin: auto;
+   font-size: 16px;
+   color: darkred;
+   box-shadow: 0 0 8px #252523;
+   border: none;
+}
+
+select {
+   box-shadow: 0 0 8px #252523;
+   border: none;
+   width: 90%;
+   padding: auto 10px;
+   margin: auto;
+}
+
+.label {
+   width: 90%;
+   padding: auto 10px;
+   margin: auto;
+   text-align: right;
 }
 
 .form-sign .form-control:focus {
-  z-index: 2;
-}
-label {
-  font-size: 18px;
-  vertical-align: middle;
+   z-index: 2;
 }
 
+label {
+   font-size: 18px;
+   vertical-align: middle;
+}
 
 /*
   * ***************    Footer
   */
 
-
 .container {
-  width: auto;
-  max-width: 680px;
-  padding: auto 15px;
-  font-weight: bold;
+   width: auto;
+   max-width: 680px;
+   padding: auto 15px;
+   font-weight: bold;
 }
 
+/***************   captcha **********************/
+.jCaptchaText {
 
+   width: auto;
+   padding: 10px 10px;
+   background-color: darkred;
 
-/*******toggle button  **************/
+}
+
+.jCaptcha {
+   border: none;
+   /*padding: 20px 25px 20px 20px; font-size: 15px; width: 320px; height: 60px; box-sizing: border-box; outline: none;
+  border-radius: 4px 0 0 4px; vertical-align: middle; transition: all 150ms linear; box-shadow: 0 0 8px #4e4706;
+*/
+}
+
+/*******   toggle button  **************/
 
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+   position: relative;
+   display: inline-block;
+   width: 60px;
+   height: 34px;
 }
 
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+   opacity: 0;
+   width: 0;
+   height: 0;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+   position: absolute;
+   cursor: pointer;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: #ccc;
+   -webkit-transition: .4s;
+   transition: .4s;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+   position: absolute;
+   content: "";
+   height: 26px;
+   width: 26px;
+   left: 4px;
+   bottom: 4px;
+   background-color: white;
+   -webkit-transition: .4s;
+   transition: .4s;
 }
 
 input:checked+.slider {
-  background-color: darkred;
+   background-color: darkred;
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 1px #2196F3;
+   box-shadow: 0 0 1px #2196F3;
 }
 
 input:checked+.slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+   -webkit-transform: translateX(26px);
+   -ms-transform: translateX(26px);
+   transform: translateX(26px);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 34px;
+   border-radius: 34px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+   border-radius: 50%;
 }
+
 /**************************************************/
 
-@media (min-width: 48em) {
-
-
-}
+@media (min-width: 48em) {}
 
 @media (min-width: 768px) {}
