--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -1,15 +1,13 @@
 <%-include("partials/header")-%>
 <main role="main">
-    <div class="main-header">
-        <h3 class="main-subtitle pt-3 pb-3"> يسرنا تواصلك معنا</h3>
-    </div>
-    <form class="form-sign">
-        <input type="tel" id="nom" class="form-control mb-2" placeholder="الاسم" required autocomplete="off" autofocus
-            onfocus="this.value=''">
-        <textarea class="form-control  mb-2" id="exampleFormControlTextarea1" rows="3"></textarea>
-        <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off"
-            autofocus onfocus="this.value=''">
-        <button class="btn btn-md btn-default btn-block mb-3" type="submit">ارسل</button>
-    </form>
+   <div class="main-header">
+      <h3 class="main-subtitle pt-3 pb-3"> يسرنا تواصلك معنا</h3>
+   </div>
+   <form class="form-sign">
+      <input type="tel" id="nom" class="form-control mb-2" placeholder="الاسم" required autocomplete="off" autofocus onfocus="this.value=''">
+      <textarea class="form-control  mb-2" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off" autofocus onfocus="this.value=''">
+      <button class="btn btn-md btn-default btn-block" type="submit">ارسل</button>
+   </form>
 </main>
 <%-include("partials/footer")-%>
