--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,9 @@
-<footer class="footer mt-auto pb-2  mp-0">
-  <div class="container">
-    <span>تبرع &copy; 2019</span>
-  </div>
+<footer class="footer mt-auto pb-2  mb-3 ">
+   <div class="container">
+      <span>تبرع &copy; 2019</span>
+   </div>
 </footer>
 </div>
-
-
-
 </body>
 
 </html>
