--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,47 +1,43 @@
-<!doctype html>
 <html dir="rtl" lang="ar">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Blood donation,donor,patient">
-  <meta name="generator" content="BloodDonation">
-  <title>منصة تبرع</title>
-  <link href='/imgs/blood-drop.png' rel='icon' type='image/x-icon' />
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="description" content="">
+   <meta name="author" content="Blood donation,donor,patient">
+   <meta name="generator" content="BloodDonation">
+   <title>منصة تبرع</title>
+   <link href='/imgs/blood-drop.png' rel='icon' type='image/x-icon' />
 
-  <!--link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">-->
-
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="css/main.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.62/jquery.inputmask.bundle.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+   <!-- Bootstrap core CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
+   <!-- Custom styles for this template -->
+   <link href="css/main.css" rel="stylesheet">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.62/jquery.inputmask.bundle.js"></script>
+   <script type="text/javascript" src="js/main.js"></script>
 
 </head>
 
-<body class="text-center" onload="generateCaptcha()">
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header>
-      <div>
-        <nav class="nav nav-masthead justify-content-center">
-          <% if ( _connected===true ){ console.log("user connected"); %>
-          <% if ( _userType==="donor" ){ console.log("donor"); %>
-          <a class="nav-link" href="/donorstate.html">الرئسية</a>
-          <% } else {  console.log("patient");  %>
-          <a class="nav-link" href="/addrequest.html">الرئسية</a>
-          <% } %>
-          <a class="nav-link" href="/userprofile.html">تحديث المعلومات </a>
-          <% } else {  console.log("user not connected"); %>
-          <a class="nav-link" href="/"> الدخول</a>
-          <a class="nav-link" href="/signin.html">مستخدم جديد</a>
-          <a class="nav-link" href="/getcode.html">استرجاع الكود</a>
-          <% } %>
-          <a class="nav-link" href="/contactus.html">اتصل بنا</a>
-        </nav>
-      </div>
-    </header>
+<body class="text-center">
+   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header>
+         <div>
+            <nav class="nav nav-masthead justify-content-center">
+               <% if ( _connected===true ){ console.log("user connected"); %>
+               <% if ( _userType==="donor" ){ console.log("donor"); %>
+               <a class="nav-link" href="/donorstate">الرئسية</a>
+               <% } else {  console.log("patient");  %>
+               <a class="nav-link" href="/addrequest">الرئسية</a>
+               <% } %>
+               <a class="nav-link" href="/userprofile">تحديث المعلومات </a>
+               <% } else {  console.log("user not connected"); %>
+               <a class="nav-link" href="/"> الدخول</a>
+               <a class="nav-link" href="/signin">مستخدم جديد</a>
+               <a class="nav-link" href="/getcode">استرجاع الكود</a>
+               <% } %>
+               <a class="nav-link" href="/contactus">اتصل بنا</a>
+            </nav>
+         </div>
+      </header>
