lot of improvements

--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -5,7 +5,7 @@
       <h3 class="pb-3" dir="ltr"><%=_tel%></h3>
    </div>
 
-   <form class="form-sign mt-3">
+   <form class="form-sign mt-3 mb-3">
 
       <div class="mb-2 label ">سلامتك, كيف تصف حالتك؟</div>
       <select dir="rtl" name="PatientState" class="mdb-select mb-2 md-form colorful-select dropdown-primary " style="border:none;">
