--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
-<footer class="footer mt-auto pb-2  mb-3 ">
-   <div class="container">
-      <span>تبرع &copy; 2019</span>
+<footer class="footer mt-auto pb-2  ">
+   <div class=" ">
+      <h4>تبرع &copy; 2019</h4>
+      <p>للتواصل بين المرضى و المتبرعين بالدم عبر SMS</p>
    </div>
 </footer>
 </div>
