--- a/views/partials/wilaya.ejs
+++ b/views/partials/wilaya.ejs
@@ -1,4 +1,4 @@
-<div class="mb-2 label "> الولاية</div>
+<div class="mb-2 label ">في اي ولاية تقيم حاليا</div>
 <select dir="rtl" name="wilaya" class="mdb-select mb-2 md-form colorful-select dropdown-primary " style="border:none;">
    <option value="01">01-ولاية أدرار</option>
    <option value="02">02-ولاية الشلف</option>
