--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -3,11 +3,12 @@
    <div class="main-header">
       <h3 class="main-subtitle pt-3 pb-3"> يسرنا تواصلك معنا</h3>
    </div>
-   <form class="form-sign">
+   <form class="form-sign mt-3 mb-3">
       <input type="tel" id="nom" class="form-control mb-2" placeholder="الاسم" required autocomplete="off" autofocus onfocus="this.value=''">
       <textarea class="form-control  mb-2" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off" autofocus onfocus="this.value=''">
+      <%- include("partials/captcha") -%>
       <button class="btn btn-md btn-default btn-block" type="submit">ارسل</button>
    </form>
 </main>
+<%- include("partials/captchajs") -%>
 <%-include("partials/footer")-%>
