--- a/views/donorstate.ejs
+++ b/views/donorstate.ejs
@@ -2,7 +2,7 @@
 <main role="main">
    <div class="main-header ">
       <h5 class="form-title pt-3">معلومات المتبرع </h5>
-      <h3 class="pb-3 " dir="ltr">+213-555-811-350</h3>
+      <h3 class="pb-3 " dir="ltr"><%=_tel%></h3>
    </div>
    <form class="form-sign mt-3 mb-3">
       <H5 class=""> هل انت متاح حاليا للتبرع </H5>
