--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,9 +4,9 @@
       <h1 class="main-title pt-3">منصة تبرع</h1>
       <h3 class="main-subtitle pb-3"> صِلَة المرضى بالمتبرعين بالدم</h3>
    </div>
-   <form class="form-sign mt-3 mb-3">
+   <form action="/signin" method="POST" class="form-sign mt-3 mb-3">
       <h5 class="form-title mb-3"> إنشاء حساب جديد</h5>
-      <input type="text" id="tel" lang="en" dir="ltr" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+      <input type="text" id="tel" main="tel" lang="en" dir="ltr" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
       <%- include("partials/captcha") -%>
       <button class="btn btn-md btn-default btn-block" type="submit">سجل</button>
 
