--- a/views/donorstate.ejs
+++ b/views/donorstate.ejs
@@ -1,14 +1,14 @@
 <%-include("partials/header")-%>
 <main role="main">
-   <div class="main-header ">
-      <h5 class="form-title pt-3">معلومات المتبرع </h5>
-      <h3 class="pb-3 " dir="ltr"><%=_tel%></h3>
+   <div class="main-header">
+      <h5>معلومات المتبرع </h5>
+      <h3><%=_tel%></h3>
    </div>
-   <form class="form-sign mt-3 mb-3">
-      <H5 class=""> هل انت متاح حاليا للتبرع </H5>
-      <div class=" ">
+   <form class="form-sign">
 
-         <label class="switch mb-2">
+      <div class="">
+         <h5> هل انت مستعد حاليا للتبرع </H5>
+         <label class="switch">
             <input type="checkbox" name="donorStat" checked>
             <span class="slider round"></span>
          </label>
