--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,12 @@
 <footer class="footer mt-auto pb-2  ">
-   <div class=" ">
+   <div class="container ">
       <h4>تبرع &copy; 2019</h4>
-      <p>للتواصل بين المرضى و المتبرعين بالدم عبر SMS</p>
+      <p>للتواصل بين المرضى و المتبرعين بالدم عبر
+         <span style="font-size: 1.4em; color: darkred;">
+            SMS
+            <!--  <i class="fas fa-sms fa-flip-horizontal"></i> -->
+         </span>
+      </p>
    </div>
 </footer>
 </div>
