--- a/views/addrequest.ejs
+++ b/views/addrequest.ejs
@@ -1,20 +1,26 @@
 <%- include('partials/header'); -%>
 <main role="main">
    <div class="main-header">
-      <h5 class="pt-3"> اضافة طلب تبرع </h5>
-      <h3 class="pb-3" dir="ltr"><%=_tel%></h3>
+      <h5> اضافة طلب تبرع </h5>
+      <h3> <%=_tel%> </h3>
    </div>
 
-   <form class="form-sign mt-3 mb-3">
+   <form class="form-sign  ">
 
-      <div class="mb-2 label ">سلامتك, كيف تصف حالتك؟</div>
-      <select dir="rtl" name="PatientState" class="mdb-select mb-2 md-form colorful-select dropdown-primary " style="border:none;">
-         <option value="S" autofocus>مستقرة</option>
-         <option value="D">حرجة</option>
-      </select>
+      <div class=" label ">سلامتك, كيف تصف حالتك؟</div>
+      <span style="position: relative; ">
+         <select dir="rtl" name="PatientState" class="mdb-select  md-form colorful-select dropdown-primary " style="border:none;">
+            <option value="S" autofocus>مستقرة</option>
+            <option value="D">حرجة</option>
+         </select>
+         <span class="fas fa-heartbeat   selectspan"></span>
+      </span>
       <%- include("partials/wilaya") -%>
-      <input type="tel" id="adress" class="form-control mb-2" placeholder="حدد مكان تواجدك: المشفى,..." required autocomplete="off" onfocus="this.value=''" maxlength="40">
 
+      <span style="position: relative; ">
+         <span class="fas fa-map-marker-alt   errspan"></span>
+         <input type="tel" id="adress" class="form-control " placeholder="حدد مكان تواجدك: المشفى,..." required autocomplete="off" onfocus="this.value=''" maxlength="40">
+      </span>
       <%- include("partials/captcha") -%>
       <button class="btn btn-md btn-default btn-block" type="submit">اضف الطلب</button>
    </form>
