--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,20 @@
 <%- include("partials/header") -%>
 <main role="main">
    <div class="main-header ">
-      <h1 class="main-title pt-3">منصة تبرع</h1>
-      <h4 class="main-subtitle pb-3"> صِلَة المرضى بالمتبرعين بالدم</h4>
+      <h1>منصة تبرع</h1>
+      <h4> صِلَة المرضى بالمتبرعين بالدم</h4>
    </div>
    <form action="/" class="form-sign" method="POST">
+      <h5 class="form-title "> دخول</h5>
 
-      <div class="mb-2  label">الهاتف </div>
-      <input type="text" name="tel" id="tel" lang="en" dir="ltr" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+      <span style="position: relative; "><span class="fas fa-mobile-alt   errspan"></span>
+         <input type="text" name="tel" id="tel" lang="en" dir="ltr" class="form-control  " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
+      </span>
 
-      <input type="password" name="password" id="Password" class="form-control mb-2  " placeholder="الكود" required autocomplete="off" onfocus="this.value=''" maxlength="5">
-
+      <span style="position: relative; "><span class="fas fa-key  errspan"></span>
+         <input type="password" name="password" id="Password" class="form-control   " placeholder="الكود" required autocomplete="off" onfocus="this.value=''" maxlength="5">
+      </span>
       <%- include("partials/captcha") -%>
-
       <button class="btn btn-md btn-default btn-block" type="submit">دخول</button>
    </form>
 </main>
