--- a/views/partials/captcha.ejs
+++ b/views/partials/captcha.ejs
@@ -1,1 +1,1 @@
-<input class="jCaptcha form-control mb-2 " class="form-control mb-2  mt-2" type="text" placeholder="مجموع العددين يساوى ؟" maxlength="3">
+<input class="jCaptcha form-control  " class="form-control   " type="text" placeholder="مجموع العددين يساوى ؟" maxlength="3">
