--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,9 @@
    <!-- Bootstrap core CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -21,7 +24,7 @@
 </head>
 
 <body class="text-center">
-   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+   <div class="cover-container d-flex w-100 h-100 p-3 mb-0 mx-auto flex-column">
       <header>
          <div>
             <nav class="nav nav-masthead justify-content-center">
@@ -34,7 +37,7 @@
                <a class="nav-link" href="/userprofile">تحديث المعلومات </a>
                <% } else {  console.log("user not connected"); %>
                <a class="nav-link" href="/"> الدخول</a>
-               <a class="nav-link" href="/signin">مستخدم جديد</a>
+               <a class="nav-link" href="/signin">تسجيل</a>
                <a class="nav-link" href="/getcode">استرجاع الكود</a>
                <% } %>
                <a class="nav-link" href="/contactus">اتصل بنا</a>
