--- a/views/politics.ejs
+++ b/views/politics.ejs
@@ -2,11 +2,10 @@
 <main role="main">
    <div class="main-header ">
       <h1>منصة تبرع</h1>
-      <h4> صِلَة المرضى بالمتبرعين بالدم</h4>
+      <h3> صِلَة المرضى بالمتبرعين بالدم</h3>
    </div>
    <form class="form-sign  ">
-      <h5 class="form-title "> استرجاع الكود</h5>
-      <span class="fas fa-mobile-alt   errspan"></span>
+      <h5 class="form-title "> سياسة الموقع </h5>
       <input type="tel" id="tel" lang="en" dir="ltr" class="form-control " placeholder="رقم الهاتف" required autocomplete="off" autofocus onfocus="this.value=''">
       <%- include("partials/captcha") -%>
       <button class="btn btn-md btn-default btn-block" type="submit">سجل</button>
